@@ -1,4 +1,4 @@
-﻿<addon id="plugin.video.exoshark" version="1.5.1" name="ExoShark" provider-name="ExoShark">
+﻿<addon id="plugin.video.exoshark" version="1.5.2" name="ExoShark" provider-name="ExoShark">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.exoshark.artwork" version="1.0.0" />
@@ -36,11 +36,11 @@
 - netozi kiszolgáló hozzáadva
 - filmezek kiszolgáló frissítve
 - filmezz kiszolgáló frissítve
+- filminvazio kiszolgáló frissítve
 - filmbaratok kiszolgáló eltávolítva
 - filmneked kiszolgáló eltávolítva
 - filmtornado kiszolgáló eltávolítva
 - onlinefilmek kiszolgáló eltávolítva
-- sorozatkatalogis kiszolgáló eltávolítva
-- filminvazio kiszolgáló eltávolítva</news>
+- sorozatkatalogis kiszolgáló eltávolítva</news>
 	</extension>
 </addon>
